--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,39 +1,43 @@
 .kbd {
-	box-shadow: 0 2px 2px rgba(0,0,0,.1);
-	background: whitesmoke;
-	border: 1px solid rgba(0,0,0,.15);
-	border-radius: 3px;
-	/* font-size: 0.75em;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+  background: whitesmoke;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 3px;
+  /* font-size: 0.75em;
 	padding: 2px 5px;
 	position: relative;
 	top: -2px;
 	font-family: var(--code-font); */
-    font-size: 0.75em;
-	text-transform: uppercase;
-    color: black;
+  font-size: 0.75em;
+  text-transform: uppercase;
+  color: black;
 }
 
 .wide-table {
-    width: 100%;
-    border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
 }
 
 .table-header {
-    text-transform: uppercase;
-    text-align: left;
-    font-weight: bold;
+  text-transform: uppercase;
+  text-align: left;
+  font-weight: bold;
 }
 
 .keys {
-	padding: 2px 5px;
-	position: relative;
-	top: -2px;
-	font-family: var(--code-font);
+  padding: 2px 5px;
+  position: relative;
+  top: -2px;
+  font-family: var(--code-font);
 }
 
-.cm-tab {
-	background-position: right;
-	background-repeat: no-repeat;
-	border-left: 1px solid rgb(142, 168, 192);
-	background-image: none;
+.cm-tab{
+  background-position: right;
+  background-repeat: no-repeat;
+  border-left: 1px solid rgb(142, 168, 192);
+  background-image: none;
+}
+
+.cm-tab-active {
+	border-left: 3px solid rgb(142, 168, 192);
 }
