--- a/docs/styles.css
+++ b/docs/styles.css
@@ -3,11 +3,6 @@
   background: whitesmoke;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 3px;
-  /* font-size: 0.75em;
-	padding: 2px 5px;
-	position: relative;
-	top: -2px;
-	font-family: var(--code-font); */
   font-size: 0.75em;
   text-transform: uppercase;
   color: black;
@@ -40,4 +35,8 @@
 
 .cm-tab-active {
 	border-left: 1px solid rgb(73, 73, 73);
+}
+
+.cm-editor {
+  border: 1px solid gray;
 }
