--- a/docs/styles.css
+++ b/docs/styles.css
@@ -26,7 +26,7 @@
   font-family: var(--code-font);
 }
 
-.cm-tab{
+.cm-tab {
   background-position: right;
   background-repeat: no-repeat;
   border-left: 1px solid rgba(73, 73, 73, 0.356);
@@ -34,30 +34,67 @@
 }
 
 .cm-tab-active {
-	border-left: 1px solid rgb(73, 73, 73);
+  border-left: 1px solid rgb(73, 73, 73);
 }
 
 .cm-editor {
   border: 1px solid gray;
 }
 
-.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
-  background-color: #8064A2 !important;
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited {
+  background-color: #8064a2 !important;
 }
 
-.btn-yellow, .btn-yellow:hover, .btn-yellow:active, .btn-yellow:visited {
+/* .btn-yellow{
+  margin-left: 5px;
+  padding;
+} */
+
+.btn-yellow,
+.btn-yellow:hover,
+.btn-yellow:active,
+.btn-yellow:visited {
   background-color: #eab42b !important;
   box-shadow: #332606 !important;
 }
 
-.btn-green, .btn-green:hover, .btn-green:active, .btn-green:visited{
+.btn-yellow:focus{
+  border-color: #eab42b;
+  box-shadow: 0 0 0 0.2rem #eab42b7c;
+}
+
+.btn-green,
+.btn-green:hover,
+.btn-green:active,
+.btn-green:visited {
   background-color: #54c234 !important;
 }
 
-.nav>li>button{
-  color: black;
+.btn-green:focus{
+  border-color: #54c234;
+  box-shadow: 0 0 0 0.2rem #55c23480;
 }
 
-.nav>li>button:active, .nav>li>button:hover{
+/* .btn-check:focus + .btn-green,
+.btn-primary:focus {
+  box-shadow: 0 0 0 0.25rem #55c234a8 !important;
+}
+.btn-check:active + .btn-green:focus,
+.btn-check:checked + .btn-green:focus,
+.btn-green.active:focus,
+.btn-green:active:focus,
+.show > .btn-green.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.25rem #55c234a8 !important;
+} */
+
+.nav > li > button {
+  color: black !important;
+}
+
+.nav > li > button:active,
+.nav > li > button:hover {
   color: #54c234 !important;
 }
